Remove more irrelevant files

--- a/fsharp_practice.fsproj
+++ b/fsharp_practice.fsproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Basic.fs" />
+    <Compile Include="Geometry.fs" />
+    <Compile Include="People.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 </Project>
