Made everything a script

--- a/fsharp_practice.fsproj
+++ b/fsharp_practice.fsproj
@@ -4,14 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="ProblemOne.fs" />
-    <Compile Include="ProblemTwo.fs" />
-    <Compile Include="ProblemThree.fs" />
-    <Compile Include="ProblemFour.fs" />
-    <Compile Include="ProblemFive.fs" />
-    <Compile Include="ProblemSix.fs" />
-    <Compile Include="ProblemSeven.fs" />
-    <Compile Include="ProblemEight.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="0001.MultiplesOfThreeAndFive.fsx" />
+    <Compile Include="0002.EvenFibonacciNumbers.fsx" />
+    <Compile Include="0003.LargestPrimeFactor.fsx" />
+    <Compile Include="0004.LargestPalindromeProduct.fsx" />
+    <Compile Include="0005.SmallestMultiple.fsx" />
+    <Compile Include="0006.SumSquareDifference.fsx" />
+    <Compile Include="0007.10001stPrime.fsx" />
+    <Compile Include="0008.LargestProductInASeries.fsx" />
+    <Compile Include="0009.SpecialPythagoreanTriplet.fsx" />
   </ItemGroup>
 </Project>
